# rag-error-classification

./: .envrc.example  .gitignore  LICENSE  README.md  baseconfig.py  download_data.sh  pyproject.toml
autoeval/errorclassification/: conceptvalidator.py  error_categories.py  error_prompts.py  ground_truth_chunks.py  rulebased_error_classification.py  utils.py
autoeval/llm_evaluator/: model.py  prompts.py
base/: artifact.py  component.py  rag_results.py
clients/: local_generate_client.py  local_numpy_client.py  local_rag_client.py  local_rerank_client.py
conf/: config-clapnq.yaml  config-dragonball.yaml
conf/hydra/job_logging/: custom.yaml
data/CLAPNQ/: pre_process.py  preprocess.py  readme.md
data/Dragonball/: preprocess.py  readme.md
data/Dragonball/data/: ambiguous_queries_by_GPT.csv  download.sh
embedding_client/: local_embedding_client.py
local_datasets/document_datasets/: chunkers.py  clapnq.py  dataset_helper.py  document_dataset.py  dragonball.py  utils.py
local_datasets/query_datasets/: dataset_helper.py  query_dataset.py
scripts/: clapnq_run.py  dragonball_run.py
tokenizer/rank_zephyr_7b_v1_full/: tokenizer_config.json
vector_db_client/: __init__.py  local_numpy_client.py  typing.py  utils.py
