# PACKAGE METADATA
[project]
name = "ragerrorclassification"
version = "0.0.1"
description = "Error Classification for RAG"
authors = []

requires-python = ">=3.10"

dependencies = [
    "numpy>=1.26.4",
    "tqdm>=4.66.1",
    "transformers>=4.40.1",
    "ftfy>=6.2.0",
    "openai>=1.25.1",
    "torch>=2.3.0",
    "matplotlib>=3.8.4",
    "faiss-cpu==1.7.4",
    "sentencepiece>=0.2.0",
    "protobuf>=5.26.1",
    "httpx>=0.27.0",
    "line-profiler>=4.1.3",
    "hydra-core>=1.3",
    "evaluate>=0.4.3",
    "dataclasses-json>=0.6.7",
    "spacy>=3.8.2",
    "litellm>=1.52.6",
    "rouge-score>=0.1.2",
    "accelerate>=0.33.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = [
    "autoeval",
    "base",
    "clients",
    "local_datasets",
]

[tool.ruff]
line-length = 100
